// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div>
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        Cosmic Incursion
      </h2>
    </div>
    <p
      className="m-v300 t--info"
    >
      We’ll use your contact info to send you email about the status of your report and to follow up with you if necessary.
    </p>
    <p
      className="m-v300 t--subinfo"
    >
      Your contact info will not be made public.
       
      <span>
        You can also 
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          submit without providing contact info
        </a>
        .
      </span>
    </p>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        First Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Last Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Email 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Phone
      </span>
      <input
        className="txt-f"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value=""
      />
    </label>
    <div
      className="m-v500 g"
    >
      <label
        className="cb"
      >
        <input
          checked={false}
          className="cb-f"
          name="remember"
          onChange={[Function]}
          type="checkbox"
          value="true"
        />
        <span
          className="cb-l"
        >
          Remember contact info on this computer
        </span>
      </label>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--8 t--info m-v200 css-hn0yet"
    >
      <span>
        Please fill out 
        <span
          className="t--req"
        >
          required
        </span>
         fields to continue
      </span>
    </div>
    <button
      className="btn g--4"
      disabled={true}
      onClick={[Function]}
    >
      Submit Report
    </button>
  </div>
</div>
`;

exports[`filled request 1`] = `
<div>
  <div>
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        Cosmic Incursion
      </h2>
    </div>
    <p
      className="m-v300 t--info"
    >
      We’ll use your contact info to send you email about the status of your report and to follow up with you if necessary.
    </p>
    <p
      className="m-v300 t--subinfo"
    >
      Your contact info will not be made public.
       
      <span>
        You can also 
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          submit without providing contact info
        </a>
        .
      </span>
    </p>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        First Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Carol"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Last Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Danvers"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Email 
        <span
          className="t--req"
        >
          Required
        </span>
      </span>
      <input
        className="txt-f"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value="marvel@alphaflight.gov"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Phone
      </span>
      <input
        className="txt-f"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value="(617) 555-1234"
      />
    </label>
    <div
      className="m-v500 g"
    >
      <label
        className="cb"
      >
        <input
          checked={false}
          className="cb-f"
          name="remember"
          onChange={[Function]}
          type="checkbox"
          value="true"
        />
        <span
          className="cb-l"
        >
          Remember contact info on this computer
        </span>
      </label>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--8 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--4"
      disabled={false}
      onClick={[Function]}
    >
      Submit Report
    </button>
  </div>
</div>
`;
